<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/transparentGrey"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/details_now_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/detailsNowTemperature"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_celsius_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/detailsCelsiusMark"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/details_now_temperature"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_celsius_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/detailsCelsiusLetter"
            android:textSize="80sp"
            app:layout_constraintStart_toEndOf="@+id/details_celsius_mark"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/transparentGrey"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/details_today_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsTodayDate"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsCityName"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_today_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/transparentGrey"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/details_weather_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsWeather"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/details_weather_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@+id/details_weather_title"
            app:layout_constraintStart_toStartOf="@+id/details_weather_title"
            app:layout_constraintTop_toBottomOf="@+id/details_weather_title"
            app:srcCompat="@drawable/weather_icon" />

        <TextView
            android:id="@+id/details_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsWeatherDescription"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/details_weather_icon"
            app:layout_constraintStart_toStartOf="@+id/details_weather_icon"
            app:layout_constraintTop_toBottomOf="@+id/details_weather_icon" />


        <TextView
            android:id="@+id/details_visibility_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsVisibility"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/details_clouds_title"
            app:layout_constraintStart_toEndOf="@+id/details_weather_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/details_visibility_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@+id/details_visibility_title"
            app:layout_constraintStart_toStartOf="@+id/details_visibility_title"
            app:layout_constraintTop_toBottomOf="@+id/details_visibility_title"
            app:srcCompat="@drawable/visibility_icon" />

        <TextView
            android:id="@+id/details_visibility_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsVisibilityDescription"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/details_visibility_icon"
            app:layout_constraintStart_toStartOf="@+id/details_visibility_icon"
            app:layout_constraintTop_toBottomOf="@+id/details_visibility_icon" />


        <TextView
            android:id="@+id/details_clouds_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsClouds"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/details_clouds_description"
            app:layout_constraintStart_toStartOf="@+id/details_clouds_description"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/details_clouds_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@+id/details_clouds_description"
            app:layout_constraintStart_toStartOf="@+id/details_clouds_description"
            app:layout_constraintTop_toBottomOf="@+id/details_clouds_title"
            app:srcCompat="@drawable/clouds_icon" />

        <TextView
            android:id="@+id/details_clouds_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsCloudsDescription"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_clouds_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:text="@string/detailsbutton"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>