<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_header"
        style="@style/DashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/error_header"
        app:layout_constraintBottom_toTopOf="@+id/error_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/text_view_description"
        style="@style/DashboardDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_header" />


    <Button
        android:id="@+id/error_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/error_button"
        app:layout_constraintBottom_toBottomOf="parent"  />


</androidx.constraintlayout.widget.ConstraintLayout>